# health-insurance-cost-prediction

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py
models/: health_insurance_xgboost_model.joblib
notebooks/: 01_preprocessing.ipynb  02_regression_models.ipynb  03_hyperparameter_tuning.ipynb  04_model_evaluation.ipynb  05_feature_importance.ipynb.ipynb  06_model_export.ipynb
src/: eda.py  load_data.py  visualization.py
